# json2yaml

./: LICENSE  README.md  setup.cfg
src/json2yaml/: cli.py
