[metadata]
name = json2yaml
version = v1.0.0
url = https://github.com/konono/json2yaml
description = json and yaml interconversion tool
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = konono
author_email = kono@ms1.kononet.jp
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.7, <4
package_dir=
    =src
packages = find:
install_requires =
    anyconfig
    argparse
    pyyaml

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  json2yaml = json2yaml.cli:main
